# taro

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: python-tests.yml
taro/: constexpr.py  convert.py  datatype.py  expression.py  query.py  utils.py
tests/: test_constexpr.py  test_expression.py
