[metadata]
name = taro
version = attr: taro.__version__
url = https://github.com/OneRaynyDay/taro/tree/main/taro
license = MIT License
license_files = LICENSE
author = Ray Zhang
author_email = peifeng2005@gmail.com
description = SQL Compute Engine
description_file = README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    trino, sql, arrow, python

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    treeno
    pyarrow==8.0.0
python_requires = >= 3.7
test_suite = tests

[options.packages.find]
exclude = tests*

[options.extras_require]
test =
    pytest~=6.2.5

docs =
    Sphinx~=4.3.2
    sphinx-autodoc-typehints~=1.15.2
    sphinx-press-theme~=0.8.0

[tool:pytest]
addopts = --doctest-modules
